styles.css
* {
    font-family: roboto, Arial, san-serif;
}

a {
    text-decoration: none;
    color: white;
}

html, body {
    margin: 0;
    height: 100%;
}

body {
    display: flex;
    margin: 0;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
}

.block-one,
.block-two,
.block-three,
.block-four {
    padding: 8px 64px;
    flex: 1;
}

.footer {
    padding: 8px 64px;
}

.header {
    display: flex;
    align-items: center;
    background-color: #1F2937;
    padding: 8px;
}

.right-links {
    display: flex;
    gap: 8px;
}

.logo {
    font-size: 24px;
    flex: 1;
}

.block-one {
    background-color: #1F2937;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: white;
}

.content-one {
    display: flex;
    flex-grow: 1;
    align-self: center;
    align-items: center;
    justify-content: center;
    gap: 16px;
}

.left-content {
    display: flex;
    flex: 1 1 0;
    flex-direction: column;
    gap: 16px;
}

.right-content{
    flex:1 1 0;
}

.blurb-header {
    font-size: 48px;
    font-weight: 900;
}

button {
    align-self: flex-start;
    background-color: royalblue;
    color: white;
    border-radius: 8px;
    padding: 8px;
    border: 1px solid royalblue;
    padding: 8px 16px;
}

.footer {
    display: flex;
    justify-content: center;
}

